@@ -3,6 +3,9 @@
 * Fix a bug in the html5lib treebuilder which sometimes created
   disconnected trees. [bug=1039527]
 
+* Fix a bug in the lxml treebuilder which crashed when a tag included
+  an attribute from the predefined "xml:" namespace. [bug=1065617]
+
 = 4.1.3 (20120820) =
 
 * Skipped a test under Python 2.6 and Python 3.1 to avoid a spurious
